--- a/playwright/config.json
+++ b/playwright/config.json
@@ -1,7 +1,7 @@
 {
-    "url": "http://localhost:2368/ghost",
+    "url": "http://localhost:2369/ghost",
     "credentials": {
-        "email": "emilsonqp@gmail.com",
+        "email": "drummerwilliam@gmail.com",
         "password": "pruebasmiso"
     },
     "pathScreenshots": "./screenshots/3.42.5/",
