--- a/playwright/package.json
+++ b/playwright/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "faker": "^5.5.3",
-    "mocha": "^8.4.0",
     "mockaroo": "^0.1.7",
     "playwright": "^1.10.0"
+  },
+  "devDependencies": {
+    "mocha": "^8.4.0"
   }
 }
